--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body {
   padding: 0;
   margin: 0;
+  font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 .header {
@@ -8,13 +9,13 @@ body {
   justify-content: space-between;
   background-color: #1F2937;
   align-items: center;
-  font-family: roboto;
+  padding-left: 20px;
 }
 
 .header-logo {
   color: white;
   font-size: 24px;
-  margin: 10px 60px;
+  margin: 10px 75px;
 }
 
 .header-links {
@@ -28,17 +29,68 @@ body {
   padding: 10px 20px;
 }
 
-.section-1 img {
-  width: 500px;
-  height: auto;
+.section-1 {
+  display: flex;
+  background-color: #1F2937;
+  padding: 50px 0px;
 }
 
+.section-1 .heading {
+  color: white;
+  font-size: 48px;
+  font-weight: 900;
+  margin-bottom: 5px;
+}
+
+.section-1 .content {
+  margin: 10px 100px;
+}
+
+.section-1 .text {
+  font-size: 18px;
+  color: #E5E7EB;
+  text-wrap: wrap;
+}
+
+button {
+  background-color: #3882f6;
+  color: #E5E7EB;
+  border: none;
+  border-radius: 4px;
+  padding: 5px 25px;
+  font-size: 15px;
+}
+
+.section-1 img {
+  width: auto;
+  height: 250px;
+  margin: 30px 60px;
+}
+
+.section-2 .heading {
+  font-size: 36px;
+  color: #1F2937;
+  text-align: center;
+  font-weight: 900;
+  margin: 30px;
+}
+
+.section-2 ul {
+  display: flex;
+  list-style-type: none;
+  justify-content: space-around;
+  padding: 0px 250px;
+  margin-bottom: 80px;
+}
 
 .section-2 img {
-  width: 300px;
+  width: 150px;
   height: auto;
+  border: 4px solid #3882f6;
+  border-radius: 8px;
 }
 
-ul {
-  list-style-type: none;
+li {
+  margin: 10px 30px;
+  text-align: center;
 }
