Added css for section-3,4 and footer

--- a/styles.css
+++ b/styles.css
@@ -79,7 +79,7 @@ button {
   display: flex;
   list-style-type: none;
   justify-content: space-around;
-  padding: 0px 250px;
+  padding: 0px 230px;
   margin-bottom: 80px;
 }
 
@@ -93,4 +93,65 @@ button {
 li {
   margin: 10px 30px;
   text-align: center;
+}
+
+.section-3 {
+  display: flex;
+  flex-direction: column;
+  background-color: #E5E7EB;
+  font-size: 36px;
+  font-style: italic;
+  color: #1F2937;
+}
+
+.quote {
+  display: flex;
+  flex-direction: column;
+  margin: 100px 200px;
+}
+
+.quote p {
+  padding-bottom: 0;
+}
+
+.quote .quote-by {
+  font-size: 20px;
+  font-weight: 900;
+  font-style: normal;
+  margin-top: -30px;
+  margin-left: auto;
+  margin-right: 80px;
+}
+
+.section-4 {
+  background-color: #3882f6;
+  color: white;
+  display: flex;
+  justify-content: space-around;
+  margin: 100px 80px;
+  padding: 40px;
+  border-radius: 4px;
+}
+
+.section-4 .heading {
+  font-weight: 900;
+  margin-bottom: 10px;
+}
+
+.section-4 div {
+  color: #E5E7EB;
+}
+
+.section-4 button {
+  border: white solid 3px;
+  border-radius: 4px;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #1F2937;
+  color: white;
+  padding: 30px;
 }
